--- a/styles_registro.css
+++ b/styles_registro.css
@@ -13,9 +13,9 @@ body {
     font-family: var(--font-style);
 }
 
-.login-box {
+.registro-box {
     position: absolute;
-    top: 50%;
+    top: 65%;
     left: 50%;
     width: 408px;
     padding: 40px;
@@ -25,14 +25,14 @@ body {
     border-radius: 10px;
 }
 
-.login-box h2 {
+.registro-box h2 {
     margin: 0 0 38px;
     padding: 0;
     color: #fff;
     text-align: center;
 }
 
-.login-box .box-usuario input {
+.registro-box .box-infos input {
     position: relative;
     width: 100%;
     padding: 10px 0;
@@ -45,7 +45,7 @@ body {
     background: transparent;
 }
 
-.login-box .box-usuario label {
+.registro-box .box-infos label {
     position: relative;
     left: 0;
     top: -68px;
@@ -56,41 +56,41 @@ body {
     transition: 0.5s;
 }
 
-.login-box .box-usuario input:focus~label,
-.login-box .box-usuario input:valid~label {
+.registro-box .box-infos input:focus~label,
+.registro-box .box-infos input:valid~label {
     top: -85px;
     left: 0;
     color: #8f7cec;
     font-size: 12px;
 }
 
-#submit {
+#btn1 {
     padding: 10px 20px;
     color: #cbbddb;
-    font-size: 16px;
+    font-size: 18px;
     text-decoration: none;
     text-transform: uppercase;
-    overflow: hidden;
     transition: 0.5s;
     letter-spacing: 4px;
     border: 1px solid #8f7cec;
     margin: auto;
+    background-color: #242026;
 }
 
-#submit:hover {
+#btn1:hover {
     background: #8f7cec;
     color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 5px#8f7cec, 0 0 25px #8f7cec, 0 0 50px #8f7cec, 0 0 100px #8f7cec;
 }
 
-.btn-formulario {
+.btn-registro {
     display: flex;
     flex-direction: row;
     margin-top: 20px;
 }
 
-#registro {
+.btn-registro p {
     font-size: 14px;
     text-decoration: none;
     color: #cbbddb;
@@ -99,8 +99,11 @@ body {
     text-align: center;
 }
 
-#registro a {
+.btn-registro a {
     margin: auto;
     color: #8f7cec;
     text-decoration: none;
 }
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+    filter: invert(1);
